@@ -90,10 +90,13 @@ $_REQUEST['hostid'] = $pageFilter->hostid;
 
 // filter set
 if (hasRequest('filter_set')) {
+	CProfile::update('web.tr_status.filter.show_triggers', getRequest('show_triggers', TRIGGERS_OPTION_RECENT_PROBLEM),
+		PROFILE_TYPE_INT
+	);
 	CProfile::update('web.tr_status.filter.show_details', getRequest('show_details', 0), PROFILE_TYPE_INT);
 	CProfile::update('web.tr_status.filter.show_maintenance', getRequest('show_maintenance', 0), PROFILE_TYPE_INT);
-	CProfile::update('web.tr_status.filter.show_severity',
-		getRequest('show_severity', TRIGGER_SEVERITY_NOT_CLASSIFIED), PROFILE_TYPE_INT
+	CProfile::update('web.tr_status.filter.show_severity', getRequest('show_severity', TRIGGER_SEVERITY_NOT_CLASSIFIED),
+		PROFILE_TYPE_INT
 	);
 	CProfile::update('web.tr_status.filter.txt_select', getRequest('txt_select', ''), PROFILE_TYPE_STR);
 	CProfile::update('web.tr_status.filter.status_change', getRequest('status_change', 0), PROFILE_TYPE_INT);
@@ -101,13 +104,6 @@ if (hasRequest('filter_set')) {
 		PROFILE_TYPE_INT
 	);
 	CProfile::update('web.tr_status.filter.application', getRequest('application'), PROFILE_TYPE_STR);
-
-	// show triggers
-	// when this filter is set to "All" it must not be remembered in the profiles because it may render the
-	// whole page inaccessible on large installations.
-	if (getRequest('show_triggers') != TRIGGERS_OPTION_ALL) {
-		CProfile::update('web.tr_status.filter.show_triggers', getRequest('show_triggers'), PROFILE_TYPE_INT);
-	}
 
 	// show events
 	$showEvents = getRequest('show_events', EVENTS_OPTION_NOEVENT);
@@ -151,18 +147,13 @@ elseif (hasRequest('filter_rst')) {
 	DBend();
 }
 
-if (hasRequest('filter_set') && getRequest('show_triggers') == TRIGGERS_OPTION_ALL) {
-	$showTriggers = TRIGGERS_OPTION_ALL;
-}
-else {
-	$showTriggers = CProfile::get('web.tr_status.filter.show_triggers', TRIGGERS_OPTION_RECENT_PROBLEM);
-}
+$showTriggers = CProfile::get('web.tr_status.filter.show_triggers', TRIGGERS_OPTION_RECENT_PROBLEM);
 $showDetails = CProfile::get('web.tr_status.filter.show_details', 0);
 $showMaintenance = CProfile::get('web.tr_status.filter.show_maintenance', 1);
 $showSeverity = CProfile::get('web.tr_status.filter.show_severity', TRIGGER_SEVERITY_NOT_CLASSIFIED);
 $txtSelect = CProfile::get('web.tr_status.filter.txt_select', '');
 $showChange = CProfile::get('web.tr_status.filter.status_change', 0);
-$statusChangeBydays = CProfile::get('web.tr_status.filter.status_change_days', 14);
+$statusChangeDays = CProfile::get('web.tr_status.filter.status_change_days', 14);
 $ackStatus = ($config['event_ack_enable'] == EVENT_ACK_DISABLED)
 	? ZBX_ACK_STS_ANY : CProfile::get('web.tr_status.filter.ack_status', ZBX_ACK_STS_ANY);
 $showEvents = CProfile::get('web.tr_status.filter.show_events', EVENTS_OPTION_NOEVENT);
@@ -221,7 +212,7 @@ $filterFormView = new CView('common.filter.trigger', [
 		'showEvents' => $showEvents,
 		'showSeverity' => $showSeverity,
 		'statusChange' => $showChange,
-		'statusChangeDays' => $statusChangeBydays,
+		'statusChangeDays' => $statusChangeDays,
 		'showDetails' => $showDetails,
 		'txtSelect' => $txtSelect,
 		'application' => $filter['application'],
@@ -353,7 +344,7 @@ if ($showSeverity > TRIGGER_SEVERITY_NOT_CLASSIFIED) {
 	$options['min_severity'] = $showSeverity;
 }
 if ($showChange) {
-	$options['lastChangeSince'] = time() - $statusChangeBydays * SEC_PER_DAY;
+	$options['lastChangeSince'] = time() - $statusChangeDays * SEC_PER_DAY;
 }
 if (!$showMaintenance) {
 	$options['maintenance'] = false;
@@ -365,9 +356,7 @@ order_result($triggers, $sortField, $sortOrder);
 $url = (new CUrl('tr_status.php'))
 	->setArgument('fullscreen', getRequest('fullscreen'))
 	->setArgument('groupid', $pageFilter->groupid)
-	->setArgument('hostid', $pageFilter->hostid)
-	->setArgument('show_triggers', getRequest('show_triggers'))
-	->setArgument('filter_set', getRequest('filter_set'));
+	->setArgument('hostid', $pageFilter->hostid);
 
 $paging = getPagingLine($triggers, $sortOrder, $url);
 
